# slowotok

./: .gitignore  LICENSE  README.md  makefile  notes.md  slowotok.cabal  stack.yaml
app/: Main.hs
data/: index.html  kariera-nikodema-dyzmy.txt  lalka-tom-drugi.txt  lalka-tom-pierwszy.txt  lord-jim.txt  o-filozofii-sredniowiecznej.txt  schulz-sanatorium-pod-klepsydra-dodo.txt  schulz-sanatorium-pod-klepsydra-edzio.txt  schulz-sanatorium-pod-klepsydra-genialna-epoka.txt  schulz-sanatorium-pod-klepsydra-ksiega.txt  schulz-sanatorium-pod-klepsydra-moj-ojciec-wstepuje-do-strazakow.txt  schulz-sanatorium-pod-klepsydra-noc-lipcowa.txt  schulz-sanatorium-pod-klepsydra-wiosna.txt  sklepy-cynamonowe-traktat-o-manekinach-dokonczenie.txt  wierna-rzeka.txt  witkacy-narkotyki.txt
data/en/: bacteria.txt  luckiest_girl.txt  new_aesthetic.txt  pirate.txt  spicy_sound_of_success.txt  tractatus.txt
data/pl/: schulz-jesien.txt  schulz-sanatorium-pod-klepsydra-druga-jesien.txt  schulz-sanatorium-pod-klepsydra-martwy-sezon.txt  schulz-sanatorium-pod-klepsydra-sanatorium-pod-klepsydra.txt  sztuka-kochania.txt
src/: Lib.hs
static/: index.html
test/: Spec.hs
