name:                slowotok
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/githubuser/slowotok#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author Here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , markov-chain
                     , MonadRandom
                     , parallel
                     , random
                     , text
  default-language:    Haskell2010

executable slowotok-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -optl-static -threaded -rtsopts -with-rtsopts=-N1
  build-depends:       base
                     , data-default-class
                     , directory
                     , http-types
                     , markov-chain
                     , mtl
                     , MonadRandom
                     , parallel
                     , scotty
                     , slowotok
                     , random
                     , text
                     , wai-extra

  default-language:    Haskell2010

test-suite slowotok-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , containers
                     , hspec
                     , MonadRandom
                     , slowotok
                     , random

  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/slowotok
